# fastapi-bank-web-application

./: .env  .gitignore  .pre-commit-config.yaml  bank.sql  compose.yaml  docker-compose.debug.yaml  docker-compose.yaml  dockerfile  entrypoint.sh  error_formatter.py  h.py  key.pem  main.py  pre-push-check.sh  pyproject.toml  readme.md  requirements.txt  setup.cfg  todo
alembic/: README  env.py
alembic/versions/: 00b53d3b7ba0_initial_migration.py
api/models/: user_models.py
api/routes/: bank_routes.py  security_routes.py
api/schemas/: user_schemas.py
api/static/scripts/: questions.js
api/static/styles/: index.css
api/static/templates/: index.html  questionnaire.html  register.html
app/: config.json  config.py  main.py
app/api/routes/: auth_routes.py  dashboard_routes.py  home_routes.py
app/api/schemas/: transaction_schemas.py
app/api/static/css/: dashboard_styles.css
app/api/static/js/: login_form.js  nav.js  register_form.js  transaction.js
app/api/templates/: base.html  dashboard.html  dashboard_base.html  footer.html  index.html  login.html  profile.html  register.html  transaction.html
app/infrastructure/: database.py  engine.py  external.py  models.py
app/schemas/: transaction.py  transaction_schemas.py  user.py  user_schemas.py
app/services/: account.py  auth.py  auth_service.py  transaction.py  transaction_service.py  user.py  user_service.py
bank_of_tomorrow/: config.py  main.py
bank_of_tomorrow/api/routes/: auth_routes.py  dashboard_routes.py  home_routes.py
bank_of_tomorrow/api/static/js/: sidebar.js
bank_of_tomorrow/api/templates/: logout.html  nav.html  sidebar.html
bank_of_tomorrow/domain/: transaction_logic.py
bank_of_tomorrow/infrastructure/: engine.py  redis_client.py
bank_of_tomorrow/services/: auth_service.py  transaction_service.py  user_service.py
db_config/: ddl.sql
docs/: Compendio TP Integrador.docx  architecture_diagram.drawio  architecture_diagramV2.drawio  bank_classes.drawio  bank_classes2.drawio  er_bank.drawio  erd_bank.drawio  use_cases.drawio
libs/: security.py
presentation/: Dockerfile  app.py  app2.py  compose.yml  pyproject.toml  requirements.txt
services/: user_service.py
src/bank_of_kukelia/: config.py  decorators.py  main.py
src/bank_of_kukelia/adapters/db/: orm.py
src/bank_of_kukelia/adapters/repositories/: user_repo.py
src/bank_of_kukelia/api/routes/: auth_routes.py  home_routes.py
src/bank_of_kukelia/api/static/js/: base_script.js  login_form.js
src/bank_of_kukelia/api/templates/: login.html  register.html
src/bank_of_kukelia/domain/: auth.py  models.py  user_repository.py
src/bank_of_kukelia/domain/models/: models.py
src/bank_of_kukelia/domain/ports/: user_repository.py
src/bank_of_kukelia/entrypoints/api/routes/: auth_routes.py  dashboard_routes.py  home_routes.py
src/bank_of_kukelia/entrypoints/api/schemas/: transaction_schemas.py  user_schemas.py
src/bank_of_kukelia/entrypoints/api/templates/: 404_not_found.html  base.html  contact.html  create_transaction.html  dashboard.html  dashboard_base.html  index.html  nav.html  profile.html  sidebar.html  transaction.html
src/bank_of_kukelia/infrastructure/: engine.py  models.py
src/bank_of_kukelia/services/: auth_service.py  transaction_service.py  user_service.py
src/bank_of_tomorrow/: main.py
src/bank_of_tomorrow/api/routes/: auth_routes.py  dashboard_routes.py  home_routes.py
src/bank_of_tomorrow/api/schemas/: transaction_schemas.py
src/bank_of_tomorrow/api/templates/: dashboard.html  nav.html  profile.html
src/bank_of_tomorrow/domain/: bank_account_logic.py
src/bank_of_tomorrow/infrastructure/: engine.py
src/bank_of_tomorrow/services/: auth_service.py  transaction_service.py  user_service.py
static/images/: mirta.jfif
static/js/: base_script.js  login_form.js  post_form.js
static/templates/: about.html  base.html  blog-home.html  contact.html  index.html  login.html  nav.html  portfolio-item.html  portfolio-overview.html  register.html  signup.html
tests/: conftest.py  factories.py  test_user.py  user_tests.py
tests/jwt/: test_jwt.py
tests/repositories/: fake_user_repo.py
tests/transaction/: test_transaction_model.py  test_transaction_service.py  transaction_chart.ipynb
tests/user/: test_user.py
(+9 files in other folders)
