[tool.poetry]
name = "desarrollo"
version = "0.1.0"
description = ""
authors = ["Tomas Zubik <zubik.tomas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
loguru = "^0.7.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
jinja2 = "^3.1.2"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 100
disable = """
    too-many-arguments,
    not-callable,
    missing-function-docstring,
    missing-module-docstring,
    fixme,
    missing-class-docstring
"""