[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tomas Zubik <zubik.tomas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
loguru = "^0.7.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
jinja2 = "^3.1.2"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
sqlalchemy = "^2.0.21"
pytest = "^7.4.2"
psycopg2 = "^2.9.7"
sqlacodegen-v2 = "^0.1.4"
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
matplotlib = "^3.8.1"

[tool.black]
line-length = 100
target_version = ['py311']
include = '\.pyi?$'

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    # "C901",  # complexity
]
fixable = ["ALL"]
unfixable = []
show-fixes = true
target-version = "py311"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
ruff = "^0.0.292"
mypy = "^1.5.1"
black = "^23.9.1"
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
pre-commit = "^3.5.0"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 100
disable = """
    too-many-arguments,
    not-callable,
    missing-function-docstring,
    missing-module-docstring,
    fixme,
    missing-class-docstring
"""

[tool.pytest.ini_options]
python_files ="test*.py"
testpaths = [
    "tests"
]

[tool.isort]
profile = "black"