[tool.poetry]
name = "presentation"
version = "0.1.0"
description = ""
authors = ["tomasz <zubik.tomas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
requests = "^2.31.0"
redis = "^5.0.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
